# vibeproject

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
app/: __init__.py  controllers.py  main.py  models.py  models_sqlalchemy.py  repository.py  views.py
app/routes/: index.py  login_route.py  upload.py  users.py
app/templates/: index.html  login.html  register.html  upload.html
app/views/: __init__.py  index_page.py  upload_page.py
tests/unit/: test_repository.py
