[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeproject"
version = "0.1.0"
description = "Microbiology image identification web app"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["microbiology", "image-classification", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.10.0"
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I001"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = 3.11
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--maxfail=1 -q"
